crates/pardosa-schema/tests/compile_fail/serde_untagged.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
#[serde(untagged)]
enum Bad {
    A(u32),
    B(String),
}
fn main() {}
