crates/pardosa-schema/tests/compile_fail/serde_untagged.stderr
error: EVT-007: GenomeSafe: #[serde(untagged)] is not supported on type. Untagged enums bypass variant serialization, causing silent data corruption in fixed-layout formats.
 --> tests/compile_fail/serde_untagged.rs:3:9
  |
3 | #[serde(untagged)]
  |         ^^^^^^^^

error: cannot find attribute `serde` in this scope
 --> tests/compile_fail/serde_untagged.rs:3:3
  |
3 | #[serde(untagged)]
  |   ^^^^^
  |
  = note: `serde` is in scope, but it is a crate, not an attribute
help: `serde` is an attribute that can be used by the derive macros `Deserialize` and `Serialize`, you might be missing a `derive` attribute
  |
4 + #[derive(Deserialize, Serialize)]
5 | enum Bad {
  |
